--- a/pynlp/requirements.txt
+++ b/pynlp/requirements.txt
@@ -1,19 +1,9 @@
-boto3==1.14.56 
-botocore==1.17.56 
-gensim==3.8.3
-google-auth==1.21.1 
-grpcio==1.31.0 
-Keras==2.4.3
-Keras-Preprocessing==1.1.2
-nltk==3.5
-numpy==1.18.5 
-pandas==1.1.1
-pytest==5.0.1
-scikit-learn==0.23.2
-scipy==1.4.1 
-spacy==2.3.2
-tensorboard==2.3.0
-tensorboard-plugin-wit==1.7.0
-tensorflow==2.3.1
-tensorflow-estimator==2.3.0
-tqdm==4.48.2
+gensim == 4.2.0
+nltk == 3.7
+numpy == 1.23.3
+pandas == 1.4.4
+scikit_learn == 1.1.2
+spacy == 3.4.1
+tensorflow == 2.10.0
+pytest == 7.1.3
+protobuf == 3.19.1
